add text guides

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </p>
         <button id="start-button">Start</button>
         <br>
+        <p>
+            Time is only recorded between the first character's keypress and the space-after-the-word's keypress. There is a space after every word.
+        </p>
         <div class="field" id="field" hidden="true">
             <div>
                 <p id="text-area"></p>
