improve guide text

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <p>
             Time is only recorded between the first character's keypress and the space-after-the-word's keypress. There is a space after every word.
         </p>
+        <p>
+            Learn the movement of every word before typing it!
+        </p>
         <div class="field" id="field" hidden="true">
             <div>
                 <p id="text-area"></p>
